TestRepo2/src/objects/Folder_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Spirits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment_Body__c</fullName>
        <label>Comment Body</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distributor_Access__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Access</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Folder Comments (Distributor Access)</relationshipLabel>
        <relationshipName>Folder_Comments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Folder Comments</relationshipLabel>
        <relationshipName>Folder_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>File</label>
        <referenceTo>File__c</referenceTo>
        <relationshipLabel>Folder Comments</relationshipLabel>
        <relationshipName>Folder_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>Folder__c</referenceTo>
        <relationshipLabel>Folder Comments</relationshipLabel>
        <relationshipName>Folder_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Folder Comment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Folder__c</columns>
        <columns>File__c</columns>
        <columns>Distributor_Name__c</columns>
        <columns>Distributor_Access__c</columns>
        <columns>Comment_Body__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Folder Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>